fixed broken layout for Quickstart list items

--- a/css/style.css
+++ b/css/style.css
@@ -354,7 +354,7 @@ font-weight:bold;
 color:#424448;
 font-weight:bold;
 }
-.features ul li{
+.front_page_section ul li{
   margin-left: 40px;
 }
 
